# brewers-journal

./: .gitignore  Cargo.toml  README.md
src/: create_recipe.rs  db.rs  error.rs  init.sql  list_recipes.rs  main.rs  templates_loader.rs
src/templates/: base.tera  create_recipe_get.tera  create_recipe_post.tera  list_recipes.tera
