[package]
name = "brewers-journal"
version = "0.1.0"
authors = ["Matthew Gordon <matthew@gordon.earth>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
include_dir = "0.6"
mobc = "0.5"
mobc-postgres = "0.5"
serde = {version = "1.0", features=["derive"]}
tera = {version="1.6", default-features = false}
thiserror = "1.0"
tokio = {version="0.2", features=["macros"]}
warp = "0.2"
